// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playground renders correctly 1`] = `
"<HotKeys className=\\"Playground pt-dark\\" keyMap={{...}} handlers={{...}}>
  <Connect(Workspace) library={[undefined]} editorValue=\\"Test value\\" sideContentTabs={{...}} />
</HotKeys>"
`;

exports[`Playground with link renders correctly 1`] = `
"<HotKeys className=\\"Playground pt-dark\\" keyMap={{...}} handlers={{...}}>
  <Connect(Workspace) library={2} editorValue=\\"display(\\\\'hello!\\\\');\\" sideContentTabs={{...}} />
</HotKeys>"
`;
